lab1/Test/L1-A-9-93.cmm
struct o3MFlrIhzXm hogmgiEhq6VGPl ( ) {
  struct ObgW5N50DXAp56h8 {
    int lL2esc ;
    float P_x4zW0En , Tek0f = gkLMsLg1e4 = A4 || gvxvQ 
      && hkxpNwX == rXPhi + RTPEA597yvsnFVwIz * - ! uSEBC6W78NMoc8_w3ut 
      [ o7QbHOYT5ttXyf4ZI >= HCGXQXGHGH8 - Xb3m / - ! ( 
      De <= rf7DFEvA * XrxaD5NTWlfBpr6y6QL ( etn , k && 
      AyjXZGh_QyBdckzhoS > cHHriPyf34tbZ6PaaEd - v6qZkZ50k 
      * ( htdCXaEYZALcWp && Hu != ! - - bVdAh8Ad4TfS80 ( 
      sXtVqVhEQQqb38HfHR , KZJTJytvmfhcRpj2ov < ) ) / sS5prj1ee 
      / 103361523.1445823324 - 414017659 ) ) ] . Xfvcvi0DNLGymBvuH 
      ;
    int UjqVvinPKPvtruR4oZGZ ;
  }bo , FphNDFuCH5 [ 919262240 ] = yO ( ) ;
}
int ;
struct {
  int r2wWcarINCEu6u5ogy ;
  struct {
  }KIAnpV3dno8ye ;
}uHPf9YIfj9vgC6 , iFMsAWEcOJs0tpjUW 

;
int KKJaFw ( int IG ) {
  ;
  if ( tp5PDWLX5CoSK0Jn )   if ( AHSJbbsu9gjUB7t ) 
      while ( cAtkShF6 ) {
    An6ZIOmTgaQnlgg ;
    HLcC_oU6wrRZ364yDA ;
    if ( hh2939 )     if ( h1SWjS )     EoLK99 
else     LcL_fk9vv 


  }
else   if ( zV2fZ2l5SwsSdBY )   return RGkaz2sXo ;



  r3QjaM1lYBYoPafrylyZ ;
}
int ;
int ;
int iVjFoV1AG4ZS5Dj ( int uZrFH_nnSx2YzH , int ) {
}
